<resources>
    <string name="app_name">Submission</string>
    <string name="github_user_app">GithubUserApp</string>
    <string name="name">Name</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="_17">17</string>
    <string name="stmik_dipanegara_makassar">STMIK DIPANEGARA MAKASSAR</string>
    <string name="indonesia_parepare">Indonesia, Parepare</string>
    <string name="valendion_pradana_pasalu">Valendion Pradana Pasalu</string>
    <string name="valendion">Valendion</string>
    <string name="todo">todo</string>
</resources>